remove commented-out obsolete code